[gd_scene load_steps=4 format=3 uid="uid://d1vxkafggwylb"]

[ext_resource type="Script" path="res://GUI/MainMenu.gd" id="1_q2656"]
[ext_resource type="AudioStream" uid="uid://dx2kjuwdmuji3" path="res://GUI/click.mp3" id="2_b0h75"]

[sub_resource type="LabelSettings" id="LabelSettings_ij2ow"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2656")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.298039, 0.521569, 0.368627, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 121.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Just A Rougelike Bullet-hell"
label_settings = SubResource("LabelSettings_ij2ow")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -209.0
offset_right = 108.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Play"

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Settings"

[node name="CreditButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Credit"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Quit
"

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ClickSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b0h75")

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
